--- a/home.html
+++ b/home.html
@@ -7,15 +7,22 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <div class="Logo">
-        <img src="img/Logo.png">
-
-        <div class="Box">
-            <div class="Logo-text">
-                <img src="img/LogoText.png">
+    <div class="container">
+        <div class="Logo">
+            <img src="img/Logo.png">
+    
+            <div class="Box">
+                <div class="Logo-text">
+                    <img src="img/LogoText.png">
+                </div>
+            </div>
+        </div>
+        <div class="form">
+            <hr>
+            <div class="form-number1">
+                
             </div>
         </div>
     </div>
-
 </body>
 </html>
